force-app/main/default/objects/RetailerServiceEquipment__c/RetailerServiceEquipment__c.object-meta.xml
<CustomObject>
    <description>Retailer Service Equipment relates Equipment to a Retailer, which determines the Equipment that are available when building a Project Service. Retailer Service Equipment is related to Retailer, Service, and Equipment.</description>
    <label>Retailer Service Equipment</label>
    <nameField>
        <displayFormat>RSE-{0000}</displayFormat>
        <label>Retailer Service Equipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retailer Service Equipment</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>