force-app/main/default/objects/RetailerServiceEquipment__c/fields/IsLocked__c.field-meta.xml
<CustomField>
    <fullName>IsLocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the equipment can be removed from project service</description>
    <inlineHelpText>Locked equipment cannot be deleted at project service level</inlineHelpText>
    <label>Is Locked</label>
    <type>Checkbox</type>
</CustomField>