force-app/main/default/objects/RetailerServiceEquipment__c/fields/Retailer__c.field-meta.xml
<CustomField>
    <fullName>Retailer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retailer</label>
    <referenceTo>Retailer__c</referenceTo>
    <relationshipLabel>Retailer Service Equipment</relationshipLabel>
    <relationshipName>RetailerServiceEquipment</relationshipName>
    <type>Lookup</type>
</CustomField>