force-app/main/default/objects/RetailerServiceEquipment__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Retailer Service Equipment</relationshipLabel>
    <relationshipName>RetailerServiceEquipment</relationshipName>
    <type>Lookup</type>
</CustomField>